# spotr

./: Cargo.toml  README.md
src/: api.rs  args.rs  auth.rs  config.rs  lib.rs
