[package]
name = "spotr"
version = "0.1.0"
authors = ["Avery Wagar <ajmw.subs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4.0"
clap = "3.0.0-beta.2"
serde = { version = "1", features = ["derive"] }
reqwest = "0.11.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
open = "1.4.0"
oauth2 = { version = "4.0.0-alpha.6"  }
url = "2.2.1"
